--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Currency Converter</string>
+    <string name="currency">Currency</string>
+    <string name="converter">Converter</string>
+    <string name="currency_ngn">NGN</string>
 </resources>
